Tidy build.gradle to generate correct pom.xml

--- a/java/newton-spring-starter/build.gradle
+++ b/java/newton-spring-starter/build.gradle
@@ -20,17 +20,10 @@ def springVersion = '1.5.2.RELEASE'
 
 dependencies {
   compile project(path: ':newton-core')
-//  compile project(path: ':newton-event-store-mongo')
-
-//  compile 'io.muoncore:muon-core:7.4.1'
-//  compile 'io.muoncore.protocol:stack-event:0.0.4'
-//  compile 'io.muoncore.protocol:stack-reactive-streams:0.0.4'
-//  compile 'io.muoncore.protocol:stack-rpc:0.0.5'
 
   compile 'commons-beanutils:commons-beanutils:1.9.3'
   compile "org.springframework.boot:spring-boot:$springVersion"
   compile "org.springframework.boot:spring-boot-autoconfigure:$springVersion"
-//  compile 'org.springframework.data:spring-data-mongodb:1.10.0.RELEASE'
 }
 
 task sourceJar(type: Jar) {
@@ -42,72 +35,36 @@ task packageJavadoc(type: Jar) {
   classifier = 'javadoc'
 }
 
-uploadArchives {
-  repositories {
-    mavenDeployer {
-//      repository(url: "file:///Users/rob/.m2/repository/")
-      pom.project {
-        name 'Newton Spring Starter'
-        description 'Newton is a toolkit for building highly portable, polyglot, reactive microservices. ' +
-                      'Newton Spring Starter implements DDD patterns on top of the Muon Event Log API.'
-        url 'http://muoncore.io'
-        developers {
-          developer {
-            name 'Muon Developers'
-            email 'info@muoncore.io'
-            organization 'Muon Project'
-            organizationUrl 'http://muoncore.io'
-          }
-        }
-        licenses {
-          license {
-            name 'The GNU Lesser General Public License, Version 3.0'
-            url 'http://www.gnu.org/licenses/lgpl-3.0.txt'
-            distribution 'repo'
-          }
-        }
+publishing {
+  publications {
+    mavenJava(MavenPublication) {
+      artifact sourceJar {
+        classifier 'sources'
+      }
+      artifact packageJavadoc
+      pom.withXml {
+        asNode().appendNode('name', 'Newton Spring Starter')
+        asNode().appendNode('description', 'Newton is a toolkit for building highly portable, polyglot, reactive ' +
+          'microservices. Newton Spring Starter implements DDD patterns on top of the Muon Event Log API.')
+        asNode().appendNode('url', 'http://muoncore.io')
+        def license = asNode().appendNode('licenses').appendNode('license')
+        license.appendNode('name', 'The GNU Lesser General Public License, Version 3.0')
+        license.appendNode('url', 'http://www.gnu.org/licenses/lgpl-3.0.txt')
+        license.appendNode('distribution', 'repo')
+
+        asNode().appendNode('scm').appendNode('url', 'https://github.com/muoncore/newton')
+
+        def developers = asNode().appendNode('developers')
+        def dev = developers.appendNode('developer')
+        dev.appendNode('name', 'Muon Developers')
+        dev.appendNode('email', 'info@muoncore.io')
+        dev.appendNode('organization', 'Muon Project')
+        dev.appendNode('organizationUrl', 'http://muoncore.io')
+
       }
     }
   }
 }
-
-//publishing {
-//  publications {
-//    mavenJava(MavenPublication) {
-//      artifact sourceJar {
-//        classifier "sources"
-//      }
-//      artifact packageJavadoc
-//    }
-//
-//    shadow(MavenPublication) { publication ->
-//      project.shadow.component(publication)
-//      pom.withXml {
-//        asNode().appendNode('name', "Newton Spring Starter")
-//        asNode().appendNode('description', 'Newton is a toolkit for building highly portable, polyglot, reactive
-// microservices. Newton Spring Starter implements DDD patterns on top of the Muon Event Log API.')
-//        asNode().appendNode('url', 'http://muoncore.io')
-//        def license = asNode().appendNode("licenses").appendNode("license")
-//        license.appendNode("name", "The GNU Lesser General Public License, Version 3.0")
-//        license.appendNode("url", "http://www.gnu.org/licenses/lgpl-3.0.txt")
-//        license.appendNode("distribution", "repo")
-//
-//        def developers = asNode().appendNode("developers")
-//        def dev = developers.appendNode("developer")
-//        dev.appendNode("name", "Muon Developers")
-//        dev.appendNode("email", "info@muoncore.io")
-//        dev.appendNode("organization", "Muon Project")
-//        dev.appendNode("organizationUrl", "http://muoncore.io")
-//
-//        asNode().appendNode("scm").appendNode("url", "https://github.com/muoncore/newton")
-//        asNode().packaging[0].value = 'jar'
-//        asNode().dependencies.'*'.each{
-//          it.scope[0].value="compile"
-//        }
-//      }
-//    }
-//  }
-//}
 
 javadoc {
   source = sourceSets.main.allJava
